feat: add account privacy lifecycle
